# speedrulingo

./: .gitignore  AGENTS.md  KANA_LEARNING_PLAN.md  LICENSE  README.md  create_admin_user.sh  docker-compose.yml  reset_postgres_db.sh  run_backend_tests_postgres.sh  ty.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  rxconfig.py
backend/alembic/: env.py
backend/alembic/versions/: 5a1c3f9b2e8d_add_word_audio_assets.py  7a1e0b4d6f2c_add_course_build_run_tables.py  8afbb8a8d088_create_initial_schema.py  940f4184d2b4_add_course_build_checkpoints.py  a91b3e4c2d1f_add_kana_learning_and_shared_audio.py  b7c3d9e4f1a2_remove_small_kana_variants.py  c1d2e3f4a5b6_replace_word_origin_flags_with_generation_pipeline.py  c4a5f8d2e1b1_drop_course_build_checkpoints.py  d1a4b7c9e2f3_add_sequence_number_to_course_build_log_events.py  d4e5f6a7b8c9_add_sentence_origin_fields.py  e8b2f4a1c6d7_add_parent_build_run_id_to_course_build_runs.py  f2b0c7e1d4a9_add_sentence_audio_assets.py
backend/config/en-ja-v1/: course.yaml
backend/config/en-ja-v1/A1_1/: pattern_examples.yaml  patterns.yaml  section.yaml  themes.yaml
backend/config/en-ja-v1/A1_2/: pattern_examples.yaml  patterns.yaml  section.yaml  themes.yaml
backend/config/en-ja-v1/A2_1/: pattern_examples.yaml  patterns.yaml  (+2 more)
backend/lint-rules/: run-ast-grep.sh  sgconfig.yml
backend/lint-rules/rule-tests/: logging-in-except-requires-exc-info-test.yml  no-db-commit-in-branch-test.yml  no-del-function-parameter-test.yml  no-list-or-tuple-from-set-test.yml  no-membership-via-constructed-set-test.yml  no-next-generator-key-lookup-in-loop-test.yml
backend/lint-rules/rules/: logging-in-except-requires-exc-info.yml  no-db-commit-in-branch.yml  no-del-function-parameter.yml  no-list-or-tuple-from-set.yml  no-membership-via-constructed-set.yml  no-next-generator-key-lookup-in-loop.yml
backend/scripts/: deploy_course_builder_flows.py  export_config_bundle.py  run_course_build.py  run_course_build_step.py  show_section_structure.py
backend/src/: admin_panel.py  app_logging.py  dependencies.py  errors.py  main.py  security.py  settings.py
backend/src/core/: __init__.py
backend/src/course_builder/: ELEVENLABS_SENTENCE_AUDIO_PLAN.md  ELEVENLABS_WORD_AUDIO_PLAN.md  README.md  __init__.py  config.py  lexicon.py
backend/src/db/: base.py  engine.py  session.py
backend/tests/: conftest.py
backend/tests/app/: test_errors.py
backend/tests/helpers/: __init__.py  builder.py  config_builder.py  fake_llms.py  pipeline.py  scenarios.py  test_config_source.py
(+376 files in other folders)
